Commit from TeleportHQ

--- a/src/components/feature-card.css
+++ b/src/components/feature-card.css
@@ -1,4 +1,4 @@
-.feature-card-container {
+.container {
   width: 320px;
   margin: var(--dl-space-space-halfunit);
   display: flex;
@@ -6,15 +6,15 @@
   align-items: center;
   flex-direction: column;
 }
-.feature-card-image {
+.image {
   width: var(--dl-size-size-doubleunit);
   height: var(--dl-size-size-doubleunit);
   object-fit: cover;
 }
-.feature-card-text {
+.text {
   margin-top: var(--dl-space-space-unit);
   margin-bottom: var(--dl-space-space-unit);
 }
-.feature-card-text1 {
+.text1 {
   text-align: center;
 }
