--- a/src/components/secondary-button.css
+++ b/src/components/secondary-button.css
@@ -1,11 +1,11 @@
-.secondary-button-container {
+.container {
   display: flex;
   position: relative;
   align-items: center;
   flex-direction: column;
   justify-content: center;
 }
-.secondary-button-button {
+.button {
   color: var(--dl-color-purple-default);
   align-self: center;
   transition: 0.3s;
@@ -17,11 +17,11 @@
   padding-bottom: 12px;
   background-color: var(--dl-color-purple-100);
 }
-.secondary-button-button:hover {
+.button:hover {
   color: var(--dl-color-gray-white);
   background-color: var(--dl-color-purple-800);
 }
-.secondary-button-button:active {
+.button:active {
   color: var(--dl-color-gray-white);
   background-color: var(--dl-color-purple-900);
 }
