--- a/src/components/primary-button.css
+++ b/src/components/primary-button.css
@@ -1,11 +1,11 @@
-.primary-button-container {
+.container {
   display: flex;
   position: relative;
   align-items: center;
   flex-direction: column;
   justify-content: center;
 }
-.primary-button-button {
+.button {
   color: var(--dl-color-gray-white);
   align-self: center;
   transition: 0.3s;
@@ -17,9 +17,9 @@
   padding-bottom: 12px;
   background-color: var(--dl-color-purple-default);
 }
-.primary-button-button:hover {
+.button:hover {
   background-color: var(--dl-color-purple-900);
 }
-.primary-button-button:active {
+.button:active {
   background-color: var(--dl-color-purple-1000);
 }
