--- a/src/components/stats-card.css
+++ b/src/components/stats-card.css
@@ -1,4 +1,4 @@
-.stats-card-container {
+.container {
   width: 200px;
   margin: var(--dl-space-space-unit);
   display: flex;
@@ -6,12 +6,12 @@
   align-items: center;
   flex-direction: row;
 }
-.stats-card-image {
+.image {
   width: 32px;
   object-fit: cover;
   margin-right: var(--dl-space-space-unit);
 }
-.stats-card-container1 {
+.container1 {
   flex: 0 0 auto;
   display: flex;
   align-items: flex-start;
