--- a/src/components/store-banner.css
+++ b/src/components/store-banner.css
@@ -1,14 +1,14 @@
-.store-banner-store-banner {
+.store-banner {
   display: flex;
   align-items: flex-start;
   flex-direction: row;
   justify-content: space-between;
 }
-.store-banner-image {
+.image {
   width: 135px;
   object-fit: cover;
 }
-.store-banner-image1 {
+.image1 {
   width: 135px;
   object-fit: cover;
   margin-left: var(--dl-space-space-halfunit);
